# uniconnect

./: .env.example  .gitignore  docker-compose.yml
server/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  seed.py  seed_admin.py  seed_nearby.py  seed_production.py  start.sh
server/alembic/: env.py
server/alembic/versions/: 000160f6a8da_update_trophy_cols.py  001_initial.py  002_activities.py  003_join_requests.py  004_comments_likes.py  005_documents.py  006_user_follows.py  0188dd62b116_add_join_requests_tracking.py  0df18bb8179e_add_reports.py  370b82b2f3f4_add_groups.py  60697fbef586_add_group_missing_cols.py  64f52008a9ff_add_attendance_confirmed.py  7f3bbb601b5b_add_group_settings.py  8d5557836958_add_require_approval_to_activities.py  a1b2c3d4e5f6_add_admin_fields_to_reports.py  c9de6a84bcb5_add_notifications.py  e06a83cd43be_add_custom_forms_and_trophies.py
server/app/: __init__.py  main.py
server/app/core/: __init__.py  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  models.py  schemas.py  security.py  storage.py
server/app/modules/: __init__.py
server/app/modules/activities/: __init__.py  constants.py  models.py  repository.py  router.py  schemas.py  service.py  spatial.py
server/app/modules/admin/: router.py  schemas.py  service.py
server/app/modules/auth/: __init__.py  router.py  schemas.py  service.py
server/app/modules/chat/: __init__.py  embeddings.py  router.py  schemas.py  service.py  tools.py
server/app/modules/documents/: __init__.py  (+5 more)
server/tests/: conftest.py  test_api.py  test_main.py
(+126 files in other folders)
